# Cross-Booster

./: Cargo.toml
locales/: en.yml  ru.yml
src/: main.rs  power.rs  registry.rs  utils.rs
